# Cpp-MySQL-Qt

./: .gitignore  2021240203-1-梁剑波-实验三.docx  CMakeLists.txt  README.md
include/: mainwindow.h  student_dao.h  student_entity.h
src/: main.cpp  mainwindow.cpp  mainwindow.ui  student.entity.cpp  student_dao.cpp
